--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,6 +10,7 @@
   get_url:
     url: https://getcomposer.org/installer
     dest: /tmp/composer-installer.php
+  changed_when: False
 
 - name: install PHP composer
   shell: php /tmp/composer-installer.php --install-dir={{ php_composer_path }} --filename=composer
