--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,10 @@
 ---
 
-php_version: "{{ '5' if ansible_distribution_major_version|int <= 8 else '7.0' }}"
+php_version_default: "{{ '5' if ansible_distribution_major_version|int <= 8 else '7.0' }}"
 
 # Packages to be installed before composer
 php_composer_deps:
-  - "php{{ php_version }}-cli"
+  - "php{{ php_version_default }}-cli"
 
 # The path where the composer binary is installed
 php_composer_path: /usr/local/bin
